# Apk-builder

./: .dockerignore  .gitattributes  .gitignore  .replit  Dockerfile  activity-log.txt  build.sh  gradle.properties  java_pid8688.hprof  java_pid9676.hprof  package-lock.json  package.json  packageids.json  pyproject.toml  replit.md  replit.nix  run_build.sh  server.js  settings.gradle  start.sh
Apk-builder/: .replit  LICENSE  build.sh  gradle.properties  server.js
Testing/: DOCUMENTATION.md  activity-log.txt
accessibility-apk/: README.md  gradle.properties  settings.gradle
android-apk-builder/: .gitignore  .replit  activity-log.txt  package-lock.json
apk-output/: Installer-release.apk  Installer-release.apk.idsig  RemoteAccess-release.apk  RemoteAccess-release.apk.idsig
app/: build.access_id  build.app_id  build.gradle  obf-dict.txt  proguard-rules.pro  release.keystore
app/src/main/cpp/: CMakeLists.txt  guard.c
backend/: .env.example  .jwt_secret  package-lock.json  package.json  redis.js  server-ultimate.js  server.js  vite.config.mjs
build_logs/: py.err
frontend/: Dockerfile  admin-dashboard.html  admin-login.html  admin-settings.html  apk-builder.html  btmob-view.html  control-panel.html  dashboard.html  device-control.html  index.html  license.html  login.html  lucus-complete-with-modals.html  lucus-control-panel.html  lucus-license-panel.html  lucus-rat-complete.html  multi-control.html  register.html  ultimate-dashboard.html  user-dashboard.html
frp/: frpc.toml
frpc/: frpc.toml
frps/: frps.toml
installer/: build.app_id  build.gradle  (+2 more)
(+293 files in other folders)
